--- a/_notebooks/Foundation/Lists-Pop-Hw.ipynb
+++ b/_notebooks/Foundation/Lists-Pop-Hw.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "---\n",
+    "layout: post\n",
+    "title: Lists Popcorn Hacks\n",
+    "description: Popcorn Hacks for Lists\n",
+    "categories: [Python]\n",
+    "permalink: /Lists/Pop/Hw\n",
+    "menu: nav/tools_setup.html\n",
+    "toc: true\n",
+    "comments: true"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
