added popcorn hacks

--- a/_notebooks/Foundation/2024-10-06-3.8-ForLoops-Hw.ipynb
+++ b/_notebooks/Foundation/2024-10-06-3.8-ForLoops-Hw.ipynb
@@ -13,7 +13,7 @@
     "title: Lists Homework\n",
     "description: Homework Hacks for Lists\n",
     "categories: [Python]\n",
-    "permalink: /3.8/Lists/Hw\n",
+    "permalink: /3.8/ForLoops/Hw\n",
     "menu: nav/tools_setup.html\n",
     "toc: true\n",
     "comments: true"
