--- a/_notebooks/Foundation/2024-10-06-Forloops-Pop-Hw.ipynb
+++ b/_notebooks/Foundation/2024-10-06-Forloops-Pop-Hw.ipynb
@@ -244,6 +244,71 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "source": [
+    "## Popcorn Hack for 3.8.4 Continue and Break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "// Grading System in JavaScript\n\nfunction gradeHomework(score) {\n    if (score >= 90 && score <= 100) {\n        return \"A - Exceptional (90-100%): Surpasses all expectations with notable creativity or extensive effort.\";\n    } else if (score >= 80 && score < 90) {\n        return \"B - Very Good (80-89%): Meets all requirements with only a few minor inaccuracies.\";\n    } else if (score >= 70 && score < 80) {\n        return \"C - Acceptable (70-79%): Contains some missing elements; demonstrates a basic grasp of concepts.\";\n    } else if (score >= 60 && score < 70) {\n        return \"D - Needs Attention (60-69%): Lacks several key components; significant errors present.\";\n    } else {\n        return \"F - Unsatisfactory (0-59%): Shows minimal effort or misunderstanding of the material.\";\n    }\n}\n\nfunction calculateGrade(popcornHacks, homeworkAssignments, submissionQuality) {\n    const totalScore = (popcornHacks * 0.4) + (homeworkAssignments * 0.5) + (submissionQuality * 0.1);\n    return totalScore;\n}\n\n// Example Usage\nconst popcornHacksScore = 80; // Score out of 100 for popcorn hacks\nconst homeworkScore = 85;      // Score out of 100 for homework assignments\nconst submissionQualityScore = 90; // Score out of 100 for submission quality\n\nconst finalScore = calculateGrade(popcornHacksScore, homeworkScore, submissionQualityScore);\nconsole.log(`Final Score: ${finalScore.toFixed(2)}`);\nconsole.log(gradeHomework(finalScore));\n\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "// Grading System in JavaScript\n",
+    "\n",
+    "function gradeHomework(score) {\n",
+    "    if (score >= 90 && score <= 100) {\n",
+    "        return \"A - Exceptional (90-100%): Surpasses all expectations with notable creativity or extensive effort.\";\n",
+    "    } else if (score >= 80 && score < 90) {\n",
+    "        return \"B - Very Good (80-89%): Meets all requirements with only a few minor inaccuracies.\";\n",
+    "    } else if (score >= 70 && score < 80) {\n",
+    "        return \"C - Acceptable (70-79%): Contains some missing elements; demonstrates a basic grasp of concepts.\";\n",
+    "    } else if (score >= 60 && score < 70) {\n",
+    "        return \"D - Needs Attention (60-69%): Lacks several key components; significant errors present.\";\n",
+    "    } else {\n",
+    "        return \"F - Unsatisfactory (0-59%): Shows minimal effort or misunderstanding of the material.\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "function calculateGrade(popcornHacks, homeworkAssignments, submissionQuality) {\n",
+    "    const totalScore = (popcornHacks * 0.4) + (homeworkAssignments * 0.5) + (submissionQuality * 0.1);\n",
+    "    return totalScore;\n",
+    "}\n",
+    "\n",
+    "// Example Usage\n",
+    "const popcornHacksScore = 80; // Score out of 100 for popcorn hacks\n",
+    "const homeworkScore = 85;      // Score out of 100 for homework assignments\n",
+    "const submissionQualityScore = 90; // Score out of 100 for submission quality\n",
+    "\n",
+    "const finalScore = calculateGrade(popcornHacksScore, homeworkScore, submissionQualityScore);\n",
+    "console.log(`Final Score: ${finalScore.toFixed(2)}`);\n",
+    "console.log(gradeHomework(finalScore));\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
