--- a/_notebooks/Foundation/2024-10-06-Lists-Pop-Hw.ipynb
+++ b/_notebooks/Foundation/2024-10-06-Lists-Pop-Hw.ipynb
@@ -188,11 +188,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Meal Suggestion Generator\n",
+    "\n",
+    "This Python code creates an empty list and prompts the user to append or add to the list by typing in meal suggestions. The code then prompts to finish the input whenever they feel like it. This helps as a meal planner that can suggest meals throughout the week."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Function to gather meal suggestions from the user\n",
+    "def gather_meals():\n",
+    "    meals = []\n",
+    "    print(\"Enter your meal suggestions (type 'done' to finish):\")\n",
+    "    \n",
+    "    while True:\n",
+    "        meal = input(\"Meal suggestion: \")\n",
+    "        if meal.lower() == 'done':\n",
+    "            break\n",
+    "        meals.append(meal)\n",
+    "    \n",
+    "    return meals\n",
+    "\n",
+    "# Function to display meal suggestions\n",
+    "def display_meals(meals):\n",
+    "    count = len(meals)\n",
+    "    print(f\"You have {count} meal suggestion(s):\")  \n",
+    "    for meal in meals:\n",
+    "        print(f\"- {meal}\")  \n",
+    "\n",
+    "# Main code\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Sample input\n",
+    "    user_meals = [\n",
+    "        \"Spaghetti Bolognese\",\n",
+    "        \"Grilled Chicken Salad\",\n",
+    "        \"Vegetable Stir-Fry\",\n",
+    "        \"Tacos\",\n",
+    "        \"Pancakes for Breakfast\",\n",
+    "        \"done\"  # Indicates the end of input\n",
+    "    ]\n",
+    "    \n",
+    "    # Simulating user input for demonstration\n",
+    "    for meal in user_meals:\n",
+    "        if meal != \"done\":\n",
+    "            print(f\"Meal suggestion: {meal}\")\n",
+    "        else:\n",
+    "            break\n",
+    "    \n",
+    "    # Displaying the entered meals\n",
+    "    display_meals(user_meals[:-1])  # Exclude 'done' from the list\n"
+   ]
   }
  ],
  "metadata": {
