--- a/_notebooks/Foundation/2024-10-07-3.2-Data-Abstaction-Hw.ipynb
+++ b/_notebooks/Foundation/2024-10-07-3.2-Data-Abstaction-Hw.ipynb
@@ -10,10 +10,10 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: ForLoops Homework\n",
-    "description: Homework Hacks for ForLoops\n",
+    "title: Lists Popcorn Hacks\n",
+    "description: Popcorn Hacks for Lists\n",
     "categories: [Python]\n",
-    "permalink: /3.10/Forloops/Hw\n",
+    "permalink: /3.2/Data/Abstraction/Hw\n",
     "menu: nav/tools_setup.html\n",
     "toc: true\n",
     "comments: true"
