--- a/_notebooks/Foundation/2024-10-06-3.8-ForLoops-Hw.ipynb
+++ b/_notebooks/Foundation/2024-10-06-3.8-ForLoops-Hw.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Homework\n",
+    "## Homework Hack 1\n",
     "\n",
     "Try to add in two of the loops into your code, one in python and one in javascript.\n",
     "\n",
@@ -102,9 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework Assignment: Advanced While and Do-While Loop Practice\n",
-    "\n",
-    "## Task 1: FizzBuzz with a Twist (While Loop)\n",
+    "# Homework Hack #2\n",
     "\n",
     "### Objective\n",
     "In this task, you will create a modified version of the classic FizzBuzz game using a while loop. The program should print numbers from 1 to 50 with the following conditions:\n",
@@ -239,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task Management Program\n",
+    "# Homework Hack #3\n",
     "\n",
     "## Objective\n",
     "In this assignment, we will create a simple task management program. The program will allow us to define a list of tasks, display them with their indices, and understand how to use functions and lists in Python.\n",
@@ -287,13 +285,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loop Examples: Break and Continue\n",
+    "# Homework Hack #4\n",
     "\n",
     "In this notebook, we will demonstrate two types of loops: a break loop in JavaScript and a continue loop in Python.\n",
     "\n",
     "---\n",
-    "\n",
-    "## JavaScript: Break Loop\n",
     "\n",
     "### Objective\n",
     "Create a break loop in JavaScript that increments numbers by 2 and stops when a certain condition is met.\n",
