--- a/_notebooks/Foundation/2024-10-07-Data-Abstaction-Pop-Hw.ipynb
+++ b/_notebooks/Foundation/2024-10-07-Data-Abstaction-Pop-Hw.ipynb
@@ -10,8 +10,8 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Lists Popcorn Hacks\n",
-    "description: Popcorn Hacks for Lists\n",
+    "title: Data Abstraction Popcorn Hacks\n",
+    "description: Popcorn Hacks for Data Abstraction\n",
     "categories: [Python]\n",
     "permalink: /3.2/Data/Abstraction/Pop/Hw\n",
     "menu: nav/tools_setup.html\n",
