--- a/_notebooks/Foundation/2024-10-09-3.3-Math-Expressions-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-09-3.3-Math-Expressions-Hacks.ipynb
@@ -10,13 +10,171 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Math Expressions Homework Hacks\n",
-    "description: Homework Hacks for Math Expressions\n",
+    "title: Math Expressions all Hacks\n",
+    "description: all Hacks for Math Expressions\n",
     "categories: [Python]\n",
-    "permalink: /3.3/Math/Expressions//Hw\n",
+    "permalink: /3.3/Math/Expressions/Hacks\n",
     "menu: nav/tools_setup.html\n",
     "toc: true\n",
     "comments: true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Popcorn Hack #1 \n",
+    "\n",
+    "A function that takes in 2 variables and adds, subtracts, multiplies, dividies, and mods the two numbers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def operations(a, b):\n",
+    "    # Basic arithmetic operations with handling for division by zero\n",
+    "    add = a + b\n",
+    "    subtract = a - b\n",
+    "    multiply = a * b\n",
+    "    divide = a / b if b != 0 else 'undefined'\n",
+    "    mod = a % b if b != 0 else 'undefined'\n",
+    "    \n",
+    "    # Display the results\n",
+    "    print(f\"Add: {add}\")\n",
+    "    print(f\"Subtract: {subtract}\")\n",
+    "    print(f\"Multiply: {multiply}\")\n",
+    "    print(f\"Divide: {divide}\")\n",
+    "    print(f\"Mod: {mod}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "function operations(a, b) {\n    // Basic arithmetic operations with handling for division by zero\n    const add = a + b;\n    const subtract = a - b;\n    const multiply = a * b;\n    const divide = b !== 0 ? a / b : 'undefined';\n    const mod = b !== 0 ? a % b : 'undefined';\n\n    // Display the results\n    console.log(`Add: ${add}`);\n    console.log(`Subtract: ${subtract}`);\n    console.log(`Multiply: ${multiply}`);\n    console.log(`Divide: ${divide}`);\n    console.log(`Mod: ${mod}`);\n}\n\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "function operations(a, b) {\n",
+    "    // Basic arithmetic operations with handling for division by zero\n",
+    "    const add = a + b;\n",
+    "    const subtract = a - b;\n",
+    "    const multiply = a * b;\n",
+    "    const divide = b !== 0 ? a / b : 'undefined';\n",
+    "    const mod = b !== 0 ? a % b : 'undefined';\n",
+    "\n",
+    "    // Display the results\n",
+    "    console.log(`Add: ${add}`);\n",
+    "    console.log(`Subtract: ${subtract}`);\n",
+    "    console.log(`Multiply: ${multiply}`);\n",
+    "    console.log(`Divide: ${divide}`);\n",
+    "    console.log(`Mod: ${mod}`);\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Popcorn Hack #2\n",
+    " Use an algorithm to find certain values of the Fibonacci sequence. For example, your code should output the nth index in the sequence. An example of how the sequence works is 0,1,1,2,3,5,8,13. The pattern is you add the previous 2 numbers together to get the new number.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 15th Fibonacci number is: 377\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacc(n):\n",
+    "    if n <= 0:\n",
+    "        return \"invalid\"\n",
+    "    elif n == 1:\n",
+    "        return 0\n",
+    "    elif n == 2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fibonacc(n - 1) + fibonacc(n - 2)\n",
+    "\n",
+    "\n",
+    "n = 15 \n",
+    "print(f\"The {n}th Fibonacci number is: {fibonacc(n)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "function fibonacci(n) {\n    // Find the nth Fibonacci number\n    if (n <= 0) return \"Invalid input\";\n    if (n === 1) return 0;\n    if (n === 2) return 1;\n\n    // Use a loop to find the nth Fibonacci number\n    let a = 0, b = 1;\n    for (let i = 2; i < n; i++) {\n        const temp = b;\n        b = a + b;\n        a = temp;\n    }\n    return b;\n}\n\n// Variables\nconst a = 11, b = 0;\nconst n = 10;\n\n// Perform operations\noperations(a, b);\n\n// Print nth Fibonacci number\nconsole.log(`The ${n}th Fibonacci number is: ${fibonacci(n)}`);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%js\n",
+    "function fibonacci(n) {\n",
+    "    // Find the nth Fibonacci number\n",
+    "    if (n <= 0) return \"Invalid input\";\n",
+    "    if (n === 1) return 0;\n",
+    "    if (n === 2) return 1;\n",
+    "\n",
+    "    // Use a loop to find the nth Fibonacci number\n",
+    "    let a = 0, b = 1;\n",
+    "    for (let i = 2; i < n; i++) {\n",
+    "        const temp = b;\n",
+    "        b = a + b;\n",
+    "        a = temp;\n",
+    "    }\n",
+    "    return b;\n",
+    "}\n",
+    "\n",
+    "// Variables\n",
+    "const a = 11, b = 0;\n",
+    "const n = 10;\n",
+    "\n",
+    "// Perform operations\n",
+    "operations(a, b);\n",
+    "\n",
+    "// Print nth Fibonacci number\n",
+    "console.log(`The ${n}th Fibonacci number is: ${fibonacci(n)}`);"
    ]
   },
   {
@@ -28,17 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:Please enter a valid non-negative integer.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys as np\n",
     "import logging\n",
@@ -130,24 +280,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "// Population growth using Dynamic Programming and Matrix Exponentiation\n\n// Dynamic Programming approach to calculate the plant population growth\nfunction calculatePopulationDP(n) {\n    // Base cases for initial population\n    if (n === 0) return 10; // Starting population of 10 plants\n    if (n === 1) return 20; // Population grows to 20 after 1 time period\n\n    // Variables to store the population of previous two time periods\n    let prev1 = 20, prev2 = 10;\n    let current = 0;\n\n    // Iteratively calculate population for time period n\n    for (let i = 2; i <= n; i++) {\n        current = prev1 + prev2; // Growth based on sum of previous two periods\n        prev2 = prev1;\n        prev1 = current;\n    }\n\n    return current;\n}\n\n// Matrix Exponentiation approach (O(log n)) to calculate population growth\nfunction calculatePopulationMatrix(n) {\n    if (n === 0) return 10;\n    \n    let growthMatrix = [\n        [1, 1],\n        [1, 0]\n    ];\n\n    power(growthMatrix, n - 1);\n\n    // Result population is the top left element of the growthMatrix\n    return growthMatrix[0][0] * 20 + growthMatrix[0][1] * 10; // Initial populations in period 1 and 0\n}\n\n// Helper function to perform matrix exponentiation\nfunction power(matrix, n) {\n    if (n === 0 || n === 1) return;\n\n    let multiplier = [\n        [1, 1],\n        [1, 0]\n    ];\n\n    power(matrix, Math.floor(n / 2));\n    multiply(matrix, matrix); // Square the matrix\n\n    if (n % 2 !== 0) multiply(matrix, multiplier); // Multiply by multiplier if n is odd\n}\n\n// Matrix multiplication helper\nfunction multiply(matrixA, matrixB) {\n    let x = matrixA[0][0] * matrixB[0][0] + matrixA[0][1] * matrixB[1][0];\n    let y = matrixA[0][0] * matrixB[0][1] + matrixA[0][1] * matrixB[1][1];\n    let z = matrixA[1][0] * matrixB[0][0] + matrixA[1][1] * matrixB[1][0];\n    let w = matrixA[1][0] * matrixB[0][1] + matrixA[1][1] * matrixB[1][1];\n\n    matrixA[0][0] = x;\n    matrixA[0][1] = y;\n    matrixA[1][0] = z;\n    matrixA[1][1] = w;\n}\n\n// Example usage\nconst n = 10;\nconsole.log(`Population at time period ${n} using Dynamic Programming: ${calculatePopulationDP(n)}`);\nconsole.log(`Population at time period ${n} using Matrix Exponentiation: ${calculatePopulationMatrix(n)}`);\n",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%js\n",
     "// Population growth using Dynamic Programming and Matrix Exponentiation\n",
