--- a/_notebooks/Foundation/2024-10-09-3.5-Boolean-Expressions-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-09-3.5-Boolean-Expressions-Hacks.ipynb
@@ -10,10 +10,10 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Boolean Expressions Homework Hacks\n",
-    "description: Homework Hacks for Boolean Expressions\n",
+    "title: Boolean Expressions all Hacks\n",
+    "description: all Hacks for Boolean Expressions\n",
     "categories: [Python]\n",
-    "permalink: /3.5/Boolean/Expressions//Hw\n",
+    "permalink: /3.5/Boolean/Expressions/Hacks\n",
     "menu: nav/tools_setup.html\n",
     "toc: true\n",
     "comments: true"
@@ -23,25 +23,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Popcorn Hack #1"
+    "## Popcorn Hack #1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Truth Table for Logic Gates\n",
-      "A\tB\tAND\tOR\tNAND\tNOR\tXOR\tNOT A\tNOT B\n",
-      "0\t0\t0\t0\t1\t1\t0\t1\t1\n",
-      "0\t1\t0\t1\t1\t0\t1\t1\t0\n",
-      "1\t0\t0\t1\t1\t0\t1\t0\t1\n",
-      "1\t1\t1\t1\t0\t0\t0\t0\t0\n"
+      "A is true, so B must also be true: True\n",
+      "You can drink water, you can get food.\n"
      ]
+    }
+   ],
+   "source": [
+    "def Eating():\n",
+    "    return True  # Condition A\n",
+    "\n",
+    "def Drinking_water():\n",
+    "    return True  # Condition B\n",
+    "\n",
+    "# Original statement: if Eating then Drinking_water\n",
+    "if Eating():\n",
+    "    print(\"A is true, so B must also be true:\", Drinking_water())\n",
+    "else:\n",
+    "    print(\"If you do not get food, you dont get a drink.\")\n",
+    "\n",
+    "# Contrapositive: if not Eating then not Drinking_Water\n",
+    "if not Drinking_water():\n",
+    "    print(\"You cant drink water, so you cannot get food:\", not Eating())\n",
+    "else:\n",
+    "    print(\"You can drink water, you can get food.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework Hack #1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\npublic class ContrapositiveExample {\n    \n    public static boolean A() {\n        return true; // Condition A\n    }\n    \n    public static boolean B() {\n        return true; // Condition B\n    }\n    \n    public static void main(String[] args) {\n        // Original statement: if A then B\n        if (A()) {\n            System.out.println(\"A is true, so B must also be true: \" + B());\n        } else {\n            System.out.println(\"A is false, we cannot conclude anything about B.\");\n        }\n        \n        // Contrapositive: if not B then not A\n        if (!B()) {\n            System.out.println(\"B is false, therefore A must also be false: \" + !A());\n        } else {\n            System.out.println(\"B is true, we cannot conclude anything about A.\");\n        }\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -75,24 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "function AND(a, b) {\n    return a && b;\n}\n\nfunction OR(a, b) {\n    return a || b;\n}\n\nfunction NOT(a) {\n    return !a;\n}\n\nfunction NAND(a, b) {\n    return !(a && b);\n}\n\nfunction NOR(a, b) {\n    return !(a || b);\n}\n\nfunction XOR(a, b) {\n    return a != b;\n}\n\nfunction displayTruthTable() {\n    console.log(\"A\\tB\\tAND\\tOR\\tNAND\\tNOR\\tXOR\\tNOT A\\tNOT B\");\n    [0, 1].forEach(a => {\n        [0, 1].forEach(b => {\n            console.log(\n                `${a}\\t${b}\\t${AND(a, b)}\\t${OR(a, b)}\\t${NAND(a, b)}\\t${NOR(a, b)}\\t${XOR(a, b)}\\t${NOT(a)}\\t${NOT(b)}`\n            );\n        });\n    });\n}\n\ndisplayTruthTable();\n",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%js\n",
     "function AND(a, b) {\n",
