--- a/_notebooks/Foundation/2024-10-10-3.6-Conditionals-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-10-3.6-Conditionals-Hacks.ipynb
@@ -10,10 +10,10 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Conditinals Popcorn Hacks\n",
-    "description: Popcorn Hacks for Conditionals\n",
+    "title: Conditinals all Hacks\n",
+    "description: All hacks for Conditionals\n",
     "categories: [Python]\n",
-    "permalink: /3.6/Conditionals/Pop/Hw\n",
+    "permalink: /3.6/Conditionals/Hacks\n",
     "menu: nav/tools_setup.html\n",
     "toc: true\n",
     "comments: true"
@@ -205,6 +205,85 @@
     "    console.log(\"It's a weekday. Keep up the hard work!\");\n",
     "}\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework hack #1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "def question_with_response(prompt):\n",
+    "    answer = input(prompt)\n",
+    "    return answer\n",
+    "\n",
+    "questions = 5\n",
+    "correct = 0\n",
+    "\n",
+    "user_name = question_with_response(\"Enter your name: \")\n",
+    "print(f'Hello, {user_name}! You are running Python using {sys.executable}.')\n",
+    "ready = question_with_response(\"Are you ready to take a general knowledge quiz? (yes/no): \")\n",
+    "if ready.lower() != 'yes':\n",
+    "    print(\"Come back when you're ready! Goodbye.\")\n",
+    "    sys.exit()\n",
+    "\n",
+    "q1 = question_with_response(\"1. What is the capital of France? (a) Berlin (b) Madrid (c) Paris: \")\n",
+    "if q1.lower() == \"c\":\n",
+    "    print(\"Correct!\")\n",
+    "    correct += 1\n",
+    "else:\n",
+    "    print(\"Incorrect. The correct answer is (c) Paris.\")\n",
+    "\n",
+    "q2 = question_with_response(\"2. Who wrote 'Romeo and Juliet'? (a) Mark Twain (b) William Shakespeare (c) Jane Austen: \")\n",
+    "if q2.lower() == \"b\":\n",
+    "    print(\"Correct!\")\n",
+    "    correct += 1\n",
+    "else:\n",
+    "    print(\"Incorrect. The correct answer is (b) William Shakespeare.\")\n",
+    "\n",
+    "q3 = question_with_response(\"3. What is the largest planet in our solar system? (a) Earth (b) Jupiter (c) Saturn: \")\n",
+    "if q3.lower() == \"b\":\n",
+    "    print(\"Correct!\")\n",
+    "    correct += 1\n",
+    "else:\n",
+    "    print(\"Incorrect. The correct answer is (b) Jupiter.\")\n",
+    "\n",
+    "q4 = question_with_response(\"4. In which year did the Titanic sink? (a) 1912 (b) 1914 (c) 1918: \")\n",
+    "if q4.lower() == \"a\":\n",
+    "    print(\"Correct!\")\n",
+    "    correct += 1\n",
+    "else:\n",
+    "    print(\"Incorrect. The correct answer is (a) 1912.\")\n",
+    "\n",
+    "q5 = question_with_response(\"5. What is the chemical symbol for gold? (a) Au (b) Ag (c) Fe: \")\n",
+    "if q5.lower() == \"a\":\n",
+    "    print(\"Correct!\")\n",
+    "    correct += 1\n",
+    "else:\n",
+    "    print(\"Incorrect. The correct answer is (a) Au.\")\n",
+    "\n",
+    "print(f'{user_name}, you scored {correct}/{questions}!')\n",
+    "\n",
+    "print(\"\\nHomework Hack: Let's try a simple comparison program!\")\n",
+    "\n",
+    "num1 = float(input(\"Enter the first number: \"))\n",
+    "num2 = float(input(\"Enter the second number: \"))\n",
+    "\n",
+    "if num1 == num2:\n",
+    "    print(\"Both numbers are equal.\")\n",
+    "elif num1 > num2:\n",
+    "    print(f\"The first number ({num1}) is larger.\")\n",
+    "else:\n",
+    "    print(f\"The second number ({num2}) is larger.\")\n"
    ]
   }
  ],
