--- a/_notebooks/Foundation/2024-10-10-3.7-Nested-Conditionals-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-10-3.7-Nested-Conditionals-Hacks.ipynb
@@ -10,10 +10,10 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Nested Conditinals Popcorn Hacks\n",
-    "description: Popcorn Hacks for Nested Conditionals\n",
+    "title: Nested Conditinals all type of hacks\n",
+    "description: All hacks for Nested Conditionals\n",
     "categories: [Python]\n",
-    "permalink: /3.7/Nested/Conditionals/Pop/Hw\n",
+    "permalink: /3.7/Nested/Conditionals/Hacks\n",
     "menu: nav/tools_setup.html\n",
     "toc: true\n",
     "comments: true"
@@ -196,6 +196,42 @@
     "} else {\n",
     "    console.log(\"You are not old enough to drive.\");\n",
     "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework Hack #1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_user_input(prompt):\n",
+    "    return input(prompt)\n",
+    "\n",
+    "# Step 1: Get Age\n",
+    "age = int(get_user_input(\"Enter your age (e.g., 6, 10, etc.): \"))\n",
+    "\n",
+    "# Step 2: Check Equipment Ownership\n",
+    "has_equipment = get_user_input(\"Do you have a water bottle? (yes/no): \").lower()\n",
+    "\n",
+    "# Step 3: Check Eligibility\n",
+    "if age >= 6 and has_equipment == \"yes\":\n",
+    "    # Step 4: Determine Group\n",
+    "    if age < 9:\n",
+    "        group = \"beginner group\"\n",
+    "    else:\n",
+    "        group = \"advanced group\"\n",
+    "    \n",
+    "    # Step 5: Display Result\n",
+    "    print(f\"You can join the activity in the '{group}'.\")\n",
+    "else:\n",
+    "    print(\"Sorry, you are not eligible to join. Make sure you are at least 6 years old and have a water bottle.\")\n"
    ]
   }
  ],
